Changed to version 1.3.4: - Made it now possible to use custom methods in your personal plugin class